# FinTutor-Chatbot-Project

./: README.md  pyproject.toml  requirements.txt  setup.py  store_index.py  template.py
app/: home.py
model/: train.ipynb
src/: data_ingestion.py  embeddings.py  helper.py  loaders.py  prompt.py  splitters.py  utils.py  vector_store.py
